@@ -6,6 +6,7 @@
   Closes: SF bug #3351936
 * Fix generating an RPM installer.
   Closes: SF bug #2977749
+* Added support for the lbzip2 program handling BZIP2 archives.
 
 
 0.15 "Contraband" (released 8.4.2012)
